2006-03-17  John W. Eaton  <jwe@octave.org>

	* deprecated/hypergeometric_rnd.m: Update interface to match
	current 2.1.x version.

	* deprecated/t_rnd.m: Call trnd, not t_rnd.

	* miscellaneous/dir.m: Use readdir instead of glob.
	Special case for "." to avoid globbing.  Use list_in_columns.
	Eliminate unused variables len and finfo.

2006-03-16  Bill Denney  <bill@givebillmoney.com>

	* miscellaneous/dir.m: Improve compatibility.

2006-03-15  William Poetra Yoga Hadisoeseno  <williampoetra@gmail.com>

	* time/calendar.m, time/datestr.m, time/datevec.m, time/eomday.m,
	time/now.m, time/weekday.m: New functions from Octave Forge.

2006-03-16  John W. Eaton  <jwe@octave.org>

	* control/base/bode_bounds.m: Check for iip and iiz empty instead
	of looking at sum of max dimensions.

2006-03-16  David Bateman  <dbateman@free.fr>

	* testfun/test.m: Clear last warning before warning test to avoid
	issues with previously set warnings.
	* build_sparse_test.sh: Tests for multiple RHS for rectanguar
	sparse matrices. Force matrix type from spqr solution to be
	singular to force QR solvers to be used for assert.

2006-03-16  William Poetra Yoga Hadisoeseno  <williampoetra@gmail.com>

	* strings/strfind.m: New file.

2006-03-16  John W. Eaton  <jwe@octave.org>

	* general/rows.m, general/columns.m: Delete.

2006-03-15  William Poetra Yoga Hadisoeseno  <williampoetra@gmail.com>

	* strings/strcmpi.m: Simplify.
	* strings/strncmpi.m: Import from octave-forge, simplify.
	* strings/strtrunc.m: New file.

	* strings/lower.m, strings/upper.m: Handle cellstr arguments.

2006-03-15  John W. Eaton  <jwe@octave.org>

	* miscellaneous/doc.m: New file.
	From Soren Hauberg <soren@hauberg.org>.

2006-03-15  Keith Goodman  <kwgoodman@gmail.com>

	* miscellaneous/mkoctfile.m: New file.

2006-03-15  John W. Eaton  <jwe@octave.org>

	* polynomial/residue.m: Use & instead of && to generate arg for find.

2006-03-14  Keith Goodman  <kwgoodman@gmail.com>

	* strings/bin2dec.m: Doc fix.
