@@ -18,61 +18,60 @@
 ## 02110-1301, USA.
 
 ## -*- texinfo -*-
-## @deftypefn {Function File} {} logninv (@var{x}, @var{a}, @var{v})
+## @deftypefn {Function File} {} logninv (@var{x}, @var{mu}, @var{sigma})
 ## For each element of @var{x}, compute the quantile (the inverse of the
-## CDF) at @var{x} of the lognormal distribution with parameters @var{a}
-## and @var{v}.  If a random variable follows this distribution, its
-## logarithm is normally distributed with mean @code{log (@var{a})} and
-## variance @var{v}.
+## CDF) at @var{x} of the lognormal distribution with parameters @var{mu}
+## and @var{sigma}.  If a random variable follows this distribution, its
+## logarithm is normally distributed with mean @code{log (@var{mu})} and
+## variance @var{sigma}.
 ##
-## Default values are @var{a} = 1, @var{v} = 1.
+## Default values are @var{mu} = 1, @var{sigma} = 1.
 ## @end deftypefn
 
 ## Author: KH <Kurt.Hornik@wu-wien.ac.at>
 ## Description: Quantile function of the log normal distribution
 
-function inv = logninv (x, a, v)
+function inv = logninv (x, mu, sigma)
 
   if (! ((nargin == 1) || (nargin == 3)))
-    usage ("logninv (x, a, v)");
+    usage ("logninv (x, mu, sigma)");
   endif
 
   if (nargin == 1)
-    a = 1;
-    v = 1;
+    mu = 0;
+    sigma = 1;
   endif
 
   ## The following "straightforward" implementation unfortunately does
   ## not work (because exp (Inf) -> NaN):
-  ## inv = exp (normal_inv (x, log (a), v));
+  ## inv = exp (normal_inv (x, mu, sigma));
   ## Hence ...
 
-  if (!isscalar (a) || !isscalar (v))
-    [retval, x, a, v] = common_size (x, a, v);
+  if (!isscalar (mu) || !isscalar (sigma))
+    [retval, x, mu, sigma] = common_size (x, mu, sigma);
     if (retval > 0)
-      error ("logninv: x, a and v must be of common size or scalars");
+      error ("logninv: x, mu and sigma must be of common size or scalars");
     endif
   endif
 
   inv = zeros (size (x));
 
-  k = find (!(x >= 0) | !(x <= 1) | !(a > 0) | !(a < Inf)
-	    | !(v > 0) | !(v < Inf));
+  k = find (!(x >= 0) | !(x <= 1) | !(sigma > 0) | !(sigma < Inf));
   if (any (k))
     inv(k) = NaN;
   endif
 
-  k = find ((x == 1) & (a > 0) & (a < Inf) & (v > 0) & (v < Inf));
+  k = find ((x == 1) & (sigma > 0) & (sigma < Inf));
   if (any (k))
     inv(k) = Inf;
   endif
 
-  k = find ((x > 0) & (x < 1) & (a > 0) & (a < Inf) & (v > 0) & (v < Inf));
+  k = find ((x > 0) & (x < 1) & (sigma > 0) & (sigma < Inf));
   if (any (k))
-    if (isscalar (a) && isscalar (v))
-      inv(k) = a .* exp (sqrt (v) .* stdnormal_inv (x(k)));
+    if (isscalar (mu) && isscalar (sigma))
+      inv(k) = exp (mu) .* exp (sigma .* stdnormal_inv (x(k)));
     else
-      inv(k) = a(k) .* exp (sqrt (v(k)) .* stdnormal_inv (x(k)));
+      inv(k) = exp (mu(k)) .* exp (sigma(k) .* stdnormal_inv (x(k)));
     endif
   endif
 
