@@ -18,56 +18,56 @@
 ## 02110-1301, USA.
 
 ## -*- texinfo -*-
-## @deftypefn {Function File} {} lognpdf (@var{x}, @var{a}, @var{v})
+## @deftypefn {Function File} {} lognpdf (@var{x}, @var{mu}, @var{sigma})
 ## For each element of @var{x}, compute the probability density function
 ## (PDF) at @var{x} of the lognormal distribution with parameters
-## @var{a} and @var{v}.  If a random variable follows this distribution,
-## its logarithm is normally distributed with mean @code{log (@var{a})}
-## and variance @var{v}.
+## @var{mu} and @var{sigma}.  If a random variable follows this distribution,
+## its logarithm is normally distributed with mean @var{mu}
+## and standard deviation @var{sigma}.
 ##
-## Default values are @var{a} = 1, @var{v} = 1.
+## Default values are @var{mu} = 1, @var{sigma} = 1.
 ## @end deftypefn
 
 ## Author: KH <Kurt.Hornik@wu-wien.ac.at>
 ## Description: PDF of the log normal distribution
 
-function pdf = lognpdf (x, a, v)
+function pdf = lognpdf (x, mu, sigma)
 
   if (! ((nargin == 1) || (nargin == 3)))
-    usage ("lognpdf (x, a, v)");
+    usage ("lognpdf (x, mu, sigma)");
   endif
 
   if (nargin == 1)
-    a = 1;
-    v = 1;
+    mu = 0;
+    sigma = 1;
   endif
 
   ## The following "straightforward" implementation unfortunately does
   ## not work for the special cases (Inf, ...)
-  ## pdf = (x > 0) ./ x .* normal_pdf (log (x), log (a), v);
+  ## pdf = (x > 0) ./ x .* normal_pdf (log (x), mu, sigma);
   ## Hence ...
 
-  if (!isscalar (a) || !isscalar (v))
-    [retval, x, a, v] = common_size (x, a, v);
+  if (!isscalar (mu) || !isscalar (sigma))
+    [retval, x, mu, sigma] = common_size (x, mu, sigma);
     if (retval > 0)
-      error ("lognpdf: x, a and v must be of common size or scalars");
+      error ("lognpdf: x, mu and sigma must be of common size or scalars");
     endif
   endif
 
   pdf = zeros (size (x));
 
-  k = find (isnan (x) | !(a > 0) | !(a < Inf) | !(v > 0) | !(v < Inf));
+  k = find (isnan (x) | !(sigma > 0) | !(sigma < Inf));
   if (any (k))
     pdf(k) = NaN;
   endif
 
-  k = find ((x > 0) & (x < Inf) & (a > 0) & (a < Inf) & (v > 0) & (v < Inf));
+  k = find ((x > 0) & (x < Inf) & (sigma > 0) & (sigma < Inf));
   if (any (k))
-    if (isscalar (a) && isscalar (v))
-      pdf(k) = normpdf (log (x(k)), log (a), v) ./ x(k);
+    if (isscalar (mu) && isscalar (sigma))
+      pdf(k) = normpdf (log (x(k)), mu, sigma.^2) ./ x(k);
     else
-      pdf(k) = normpdf (log (x(k)), log (a(k)), v(k)) ./ x(k);
-  endif
+      pdf(k) = normpdf (log (x(k)), mu(k), sigma(k).^2) ./ x(k);
+    endif
   endif
 
 endfunction
